[workspace]
# Temporarily disabled to upgrade individual packages to Leptos 0.7.
# members = [
#     "book-examples/*/*",
#     "packages/colors",
#     "packages/icons/*",
#     "packages/primitives/*/*",
#     "packages/themes/*",
#     "scripts",
#     "stories/*",
# ]
members = [
    "book-examples/*/*",
    "packages/colors",
    "packages/icons/*",
    "packages/primitives/leptos/accessible-icon",
    "packages/primitives/leptos/arrow",
    "packages/primitives/leptos/aspect-ratio",
    "packages/primitives/leptos/direction",
    "packages/primitives/leptos/focus-guards",
    "packages/primitives/leptos/id",
    "packages/primitives/leptos/label",
    "packages/primitives/leptos/use-controllable-state",
    "packages/primitives/leptos/use-escape-keydown",
    "packages/primitives/leptos/use-previous",
    "packages/primitives/leptos/use-size",
    "packages/primitives/leptos/visually-hidden",
    "packages/primitives/yew/*",
    "packages/themes/yew",
    "scripts",
    "stories/*",
]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustForWeb/radix"
version = "0.0.2"

[workspace.dependencies]
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
dioxus = "0.6.1"
leptos = "0.7.2"
leptos_dom = "0.7.2"
leptos_router = "0.7.2"
leptos-node-ref = "0.0.3"
leptos-style = "0.0.3"
log = "0.4.22"
send_wrapper = "0.6.0"
serde = "1.0.198"
serde_json = "1.0.116"
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
web-sys = "0.3.72"
yew = "0.21.0"
yew-router = "0.18.0"
yew-struct-component = "0.1.4"
yew-style = "0.1.4"

[patch.crates-io]
yew = { git = "https://github.com/RustForWeb/yew.git", branch = "feature/use-composed-ref" }
yew-router = { git = "https://github.com/RustForWeb/yew.git", branch = "feature/use-composed-ref" }
