[package]
name = "scripts"
description = "Scripts for Rust Radix."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
convert_case = "0.6.0"
env_logger = "0.11.3"
http-body-util = "0.1.1"
log.workspace = true
octocrab = "0.38.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
tokio = { version = "1.37.0", features = ["full"] }
