[package]
name = "scripts"
description = "Scripts for Rust Radix."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
convert_case = "0.8.0"
env_logger = "0.11.3"
git2 = "0.20.0"
http-body-util = "0.1.1"
log.workspace = true
octocrab = "0.44.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
roxmltree = "0.20.0"
syn = "2.0.72"
tempfile = "3.14.0"
tokio = { version = "1.37.0", features = ["full"] }
