[package]
name = "radix-leptos-book"
description = "Book examples for Radix Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
radix-leptos-avatar = { path = "../../packages/primitives/leptos/avatar", optional = true }
radix-leptos-separator = { path = "../../packages/primitives/leptos/separator", optional = true }

[features]
default = ["avatar", "separator"]
avatar = ["dep:radix-leptos-avatar"]
separator = ["dep:radix-leptos-separator"]
