[package]
name = "radix-leptos-book"
description = "Book examples for Radix Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
radix-leptos-aspect-ratio = { path = "../../packages/primitives/leptos/aspect-ratio", optional = true }
radix-leptos-avatar = { path = "../../packages/primitives/leptos/avatar", optional = true }
radix-leptos-label = { path = "../../packages/primitives/leptos/label", optional = true }
radix-leptos-separator = { path = "../../packages/primitives/leptos/separator", optional = true }

[features]
default = ["aspect-ratio", "avatar", "label", "separator"]
aspect-ratio = ["dep:radix-leptos-aspect-ratio"]
avatar = ["dep:radix-leptos-avatar"]
label = ["dep:radix-leptos-label"]
separator = ["dep:radix-leptos-separator"]
