[package]
name = "radix-yew-book"
description = "Book examples for Radix Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
radix-yew-separator = { path = "../../packages/primitives/yew/separator", optional = true }
radix-yew-switch = { path = "../../packages/primitives/yew/switch", optional = true }
yew = { workspace = true, features = ["csr"] }

[features]
default = ["separator", "switch"]
separator = ["dep:radix-yew-separator"]
switch = ["dep:radix-yew-switch"]
