[package]
name = "radix-dioxus-stories"
description = "Stories for Radix Dioxus."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
dioxus = { workspace = true, features = ["router", "web"] }
log.workspace = true
web-sys.workspace = true
