[package]
name = "radix-leptos-stories"
description = "Stories for Radix Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
log.workspace = true
radix-leptos-accessible-icon = { path = "../../packages/primitives/leptos/accessible-icon" }
radix-leptos-arrow = { path = "../../packages/primitives/leptos/arrow" }
radix-leptos-avatar = { path = "../../packages/primitives/leptos/avatar" }
radix-leptos-collection = { path = "../../packages/primitives/leptos/collection" }
radix-leptos-focus-scope = { path = "../../packages/primitives/leptos/focus-scope" }
radix-leptos-label = { path = "../../packages/primitives/leptos/label" }
radix-leptos-menu = { path = "../../packages/primitives/leptos/menu" }
radix-leptos-popper = { path = "../../packages/primitives/leptos/popper" }
radix-leptos-presence = { path = "../../packages/primitives/leptos/presence" }
radix-leptos-slot = { path = "../../packages/primitives/leptos/slot" }
radix-leptos-visually-hidden = { path = "../../packages/primitives/leptos/visually-hidden" }
tailwind_fuse.workspace = true
web-sys.workspace = true
