[package]
name = "radix-leptos-stories"
description = "Stories for Radix Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
leptos-node-ref.workspace = true
log.workspace = true
radix-leptos-accessible-icon.workspace = true
radix-leptos-arrow.workspace = true
radix-leptos-aspect-ratio.workspace = true
# radix-leptos-avatar.workspace = true
# radix-leptos-checkbox.workspace = true
# radix-leptos-collection.workspace = true
# radix-leptos-focus-scope.workspace = true
radix-leptos-label.workspace = true
# radix-leptos-menu.workspace = true
# radix-leptos-popper.workspace = true
radix-leptos-portal.workspace = true
# radix-leptos-presence.workspace = true
# radix-leptos-progress.workspace = true
radix-leptos-separator.workspace = true
# radix-leptos-switch.workspace = true
# radix-leptos-toggle.workspace = true
radix-leptos-visually-hidden.workspace = true
tailwind_fuse.workspace = true
web-sys.workspace = true
