[package]
name = "radix-yew-stories"
description = "Stories for Radix Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
radix-yew-arrow = { path = "../../packages/primitives/yew/arrow" }
radix-yew-collection = { path = "../../packages/primitives/yew/collection" }
radix-yew-label = { path = "../../packages/primitives/yew/label" }
radix-yew-popper = { path = "../../packages/primitives/yew/popper" }
radix-yew-primitive = { path = "../../packages/primitives/yew/primitive" }
radix-yew-select = { path = "../../packages/primitives/yew/select" }
radix-yew-separator = { path = "../../packages/primitives/yew/separator" }
radix-yew-slot = { path = "../../packages/primitives/yew/slot" }
radix-yew-switch = { path = "../../packages/primitives/yew/switch" }
radix-yew-visually-hidden = { path = "../../packages/primitives/yew/visually-hidden" }
tailwind_fuse.workspace = true
web-sys.workspace = true
yew = { workspace = true, features = ["csr"] }
yew-attrs.workspace = true
yew-router.workspace = true
