[package]
name = "radix-yew-stories"
description = "Stories for Radix Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
radix-yew-arrow.workspace = true
radix-yew-aspect-ratio.workspace = true
radix-yew-avatar.workspace = true
radix-yew-checkbox.workspace = true
radix-yew-collection.workspace = true
radix-yew-dialog.workspace = true
radix-yew-focus-scope.workspace = true
radix-yew-label.workspace = true
radix-yew-popper.workspace = true
radix-yew-portal.workspace = true
radix-yew-presence.workspace = true
radix-yew-scroll-area.workspace = true
radix-yew-select.workspace = true
radix-yew-separator.workspace = true
radix-yew-switch.workspace = true
radix-yew-tooltip.workspace = true
radix-yew-visually-hidden.workspace = true
tailwind_fuse.workspace = true
web-sys.workspace = true
yew = { workspace = true, features = ["csr"] }
yew-router.workspace = true
yew-style.workspace = true
