[package]
name = "radix-dioxus-book-icons"
description = "Book examples for Radix Icons Dioxus."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
icons = ["dep:radix-dioxus-icons"]

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
dioxus = { workspace = true, features = ["web"] }
log.workspace = true
radix-dioxus-icons = { workspace = true, optional = true }
