[package]
name = "radix-leptos-book-icons"
description = "Book examples for Radix Icons Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
radix-leptos-icons = { workspace = true, optional = true }

[features]
default = []
icons = ["dep:radix-leptos-icons"]
