[package]
name = "radix-leptos-book-primitives"
description = "Book examples for Radix Primitives Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
# radix-leptos-aspect-ratio = { path = "../../../packages/primitives/leptos/aspect-ratio", optional = true }
# radix-leptos-avatar = { path = "../../../packages/primitives/leptos/avatar", optional = true }
# radix-leptos-checkbox = { path = "../../../packages/primitives/leptos/checkbox", optional = true }
# radix-leptos-icons = { path = "../../../packages/icons/leptos", optional = true }
radix-leptos-label = { path = "../../../packages/primitives/leptos/label", optional = true }
# radix-leptos-progress = { path = "../../../packages/primitives/leptos/progress", optional = true }
# radix-leptos-separator = { path = "../../../packages/primitives/leptos/separator", optional = true }
# radix-leptos-switch = { path = "../../../packages/primitives/leptos/switch", optional = true }
# radix-leptos-toggle = { path = "../../../packages/primitives/leptos/toggle", optional = true }

[features]
default = [
    "aspect-ratio",
    "avatar",
    "checkbox",
    "label",
    "progress",
    "separator",
    "switch",
    "toggle",
]
aspect-ratio = []
avatar = []
checkbox = []
label = ["dep:radix-leptos-label"]
progress = []
separator = []
switch = []
toggle = []
# aspect-ratio = ["dep:radix-leptos-aspect-ratio"]
# avatar = ["dep:radix-leptos-avatar"]
# checkbox = ["dep:radix-leptos-checkbox", "dep:radix-leptos-icons"]
# progress = ["dep:radix-leptos-progress"]
# separator = ["dep:radix-leptos-separator"]
# switch = ["dep:radix-leptos-switch"]
# toggle = ["dep:radix-leptos-toggle", "dep:radix-leptos-icons"]
