[package]
name = "radix-yew-book-primitives"
description = "Book examples for Radix Primitives Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
radix-yew-avatar = { path = "../../../packages/primitives/yew/avatar", optional = true }
radix-yew-icons = { path = "../../../packages/icons/yew", optional = true }
radix-yew-label = { path = "../../../packages/primitives/yew/label", optional = true }
radix-yew-select = { path = "../../../packages/primitives/yew/select", optional = true }
radix-yew-separator = { path = "../../../packages/primitives/yew/separator", optional = true }
radix-yew-switch = { path = "../../../packages/primitives/yew/switch", optional = true }
yew = { workspace = true, features = ["csr"] }

[features]
default = ["avatar", "label", "select", "separator", "switch"]
avatar = ["dep:radix-yew-avatar"]
icons = ["dep:radix-yew-icons", "radix-yew-icons/full"]
label = ["dep:radix-yew-label"]
select = [
    "dep:radix-yew-select",
    "dep:radix-yew-icons",
    "radix-yew-icons/check",
    "radix-yew-icons/chevron-down",
    "radix-yew-icons/chevron-up",
]
separator = ["dep:radix-yew-separator"]
switch = ["dep:radix-yew-switch"]
